--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-countup": "^6.2.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
