--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "next": "12.1.6",
+    "next-themes": "^0.2.0",
     "react": "18.1.0",
     "react-countup": "^6.2.0",
     "react-dom": "18.1.0"
