--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "format": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "gsap": "^3.10.4",
     "next": "12.1.6",
     "next-themes": "^0.2.0",
+    "next-transpile-modules": "^9.0.0",
     "react": "18.1.0",
     "react-countup": "^6.2.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
