--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^1.0.6",
     "gsap": "^3.10.4",
     "next": "12.1.6",
+    "next-pwa": "^5.5.4",
     "next-themes": "^0.2.0",
     "next-transpile-modules": "^9.0.0",
     "react": "18.1.0",
