--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-transpile-modules": "^9.0.0",
     "react": "18.1.0",
     "react-countup": "^6.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-scroll-parallax": "^3.3.1",
