--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
-    "@react-three/drei": "^9.31.1",
-    "@react-three/fiber": "^8.7.4",
+    "@react-three/drei": "^9.32.3",
+    "@react-three/fiber": "^8.8.4",
     "gsap": "^3.11.1",
     "next": "12.1.6",
     "next-pwa": "^5.5.4",
@@ -21,12 +21,12 @@
     "next-transpile-modules": "^9.0.0",
     "react": "18.1.0",
     "react-countup": "^6.2.0",
-    "react-device-detect": "^2.2.2",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-scroll-parallax": "^3.3.1",
     "simplex-noise": "^4.0.0",
-    "three": "^0.144.0"
+    "three": "^0.144.0",
+    "three-stdlib": "^2.17.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
