--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-scroll-parallax": "^3.3.1",
+    "react-transition-group": "^4.4.5",
     "simplex-noise": "^4.0.0",
     "three": "^0.144.0",
     "three-stdlib": "^2.17.0"
@@ -33,6 +34,7 @@
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
+    "@types/react-transition-group": "^4.4.5",
     "@types/three": "^0.144.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
