refactor: remove gsap and parallax

--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "@heroicons/react": "^1.0.6",
     "@react-three/drei": "^9.32.3",
     "@react-three/fiber": "^8.8.4",
-    "gsap": "^3.11.1",
+    "framer-motion": "^7.6.7",
     "next": "12.1.6",
-    "next-pwa": "^5.5.4",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.0",
     "next-transpile-modules": "^9.0.0",
     "react": "18.1.0",
     "react-countup": "^6.2.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
-    "react-scroll-parallax": "^3.3.1",
     "react-transition-group": "^4.4.5",
+    "scroller-motion": "^1.2.1",
     "simplex-noise": "^4.0.0",
     "three": "^0.144.0",
     "three-stdlib": "^2.17.0"
