--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "next-transpile-modules": "^9.0.0",
     "react": "18.1.0",
     "react-countup": "^6.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
-    "react-transition-group": "^4.4.5",
+    "react-use": "^17.4.0",
     "scroller-motion": "^1.2.1",
     "simplex-noise": "^4.0.0",
     "three": "^0.144.0",
