--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@heroicons/react": "^1.0.6",
     "@react-three/drei": "^9.32.3",
     "@react-three/fiber": "^8.8.4",
-    "framer-motion": "^7.6.7",
+    "gsap": "^3.11.3",
+    "locomotive-scroll": "^4.1.4",
     "next": "12.1.6",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.0",
@@ -23,9 +24,10 @@
     "react-countup": "^6.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.1.0",
+    "react-gsap": "^3.2.1",
     "react-icons": "^4.4.0",
+    "react-locomotive-scroll": "^0.2.2",
     "react-use": "^17.4.0",
-    "scroller-motion": "^1.2.1",
     "simplex-noise": "^4.0.0",
     "three": "^0.144.0",
     "three-stdlib": "^2.17.0"
@@ -35,7 +37,6 @@
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
-    "@types/react-transition-group": "^4.4.5",
     "@types/three": "^0.144.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
